# jornada_dados

./: pyproject.toml
bootcamp_python/: aula01_exemplo.py  aula01_exemplo2.py  aula02_exercicios.py  aula03_exercicios.py  aula04_exercicios.py  aula07_exercicios.py  aula09_etl.py  aula09_loguru.py  aula09_pipeline.py  dados.parquet  desafio01.py  desafio02.py  desafio03.py  desafio04.py  pyproject.toml
